feat(report): A4/US Letter paper size toggle
